<resources>
    <string name="app_name">CITIZENS</string>
    <string name="insertUser_Button">Insertar Nuevo Usuario</string>
    <string name="listUsers_Button">Listar Usuarios</string>
    <string name="listCountry_Spinner">Nacionalidad: </string>
    <string name="listGender_EditText">Género</string>
    <string name="listGenderF">Femenino</string>
    <string name="listGenderM">Masculino</string>
    <string name="numberUsers_EditText">Número de usuarios</string>
    <string name="insert_Button">Insertar</string>
    <string name="backwards_Button">Volver</string>
    <string name="date">Insertar Fecha</string>
    <string name="buttonInfo">Fecha</string>
    <string name="spinnerPromptGenero">Género</string>
    <string name="spinnerPromptNacionalidad">Nacionalidad</string>
    <string name="ToastInfo">Sólo se ha(n) podido insertar </string>
    <string name="ToastInfo2"> debido a la fecha de registro </string>
    <string name="ToastInfo3"> Se ha(n) insertado  </string>
    <string name="ToastInfo4"> usuario(s) </string>
    <string name="ToastInfo5"> No se ha insertado ningún usuario debido a la fecha de registro </string>
    <string name="EditTextInfo"> Introducir nº de usuarios a insertar </string>
    <string name="EmptyListMessage"> No hay usuarios insertados </string>
    <string name="deleteUser_Button">Eliminar</string>
    <string name="channel_name">Notificación</string>
    <string name="channel_description_edit">El usuario ha sido modificado correctamente</string>





</resources>
