<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sara.citizens.CreateUsers"
    android:layout_margin="15dp"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/listCountry_Spinner"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog"
        android:prompt="@string/spinnerPromptNacionalidad"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/listGender_EditText"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <Spinner
        android:id="@+id/genderspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:spinnerMode="dialog"
        android:prompt="@string/spinnerPromptGenero"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="115dp"
        android:text="@string/numberUsers_EditText"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <EditText
        android:id="@+id/numUsersEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:inputType="number"
        android:hint="@string/EditTextInfo"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/date"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="15sp"/>


    <Button
        android:id="@+id/pick_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="230dp"
        android:text="@string/buttonInfo"
        android:layout_marginLeft="130dp"
        android:background="@drawable/button"/>

    <TextView
        android:id="@+id/dateShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/pick_date"
        android:layout_marginEnd="9dp"
        android:layout_marginTop="29dp"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/sendInfo_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="0dp"
        android:text="@string/insert_Button"
        android:drawableStart="@drawable/envelope"
        android:padding="15dp"
        android:background="@drawable/button"/>

    <Button
        android:id="@+id/backwards_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sendInfo_Button"
        android:layout_alignBottom="@+id/sendInfo_Button"
        android:layout_marginLeft="10dp"
        android:layout_alignParentStart="true"
        android:text="@string/backwards_Button"
        android:background="@drawable/button"
        android:drawableStart="@drawable/back"
        android:padding="15dp"/>




</RelativeLayout>


